--- a/index.html
+++ b/index.html
@@ -49,6 +49,23 @@
                 </div>
             </div>
         </div>
+        <div class="media">
+            <h2>Посмотрите видео как работает виджет</h2>
+            <iframe src="https://www.youtube.com/watch?v=SpCUuyZZTp8" title="CSS для Начинающих - Практический Курс" 
+            allow=""  frameborder="0"></iframe>
+        </div>
+        <div id="pic">
+            <div class="pic1">
+                <h3>Бесплатно <br>О руб.</h3>
+                <p>Тестовая версия на 14 дней и 20 руб. на балансе для проверки качества связи</p>
+                <button>ПОПРОБОВАТЬ</button>
+            </div>
+            <div class="pic2">
+                <h3>При оплате на <br>1 год от 299 руб.</h3>
+                <p>Платите только за наш сервис, связь оплачивается по минимальной цене 4 руб. за минуту.</p>
+                <button>ПОДКЛЮЧИТЬ</button>
+            </div>
+        </div>
     </main>
 </body>
 </html>
