--- a/index.html
+++ b/index.html
@@ -54,18 +54,22 @@
             <iframe src="https://www.youtube.com/watch?v=SpCUuyZZTp8" title="CSS для Начинающих - Практический Курс" 
             allow=""  frameborder="0"></iframe>
         </div>
-        <div id="pic">
-            <div class="pic1">
-                <h3>Бесплатно <br>О руб.</h3>
-                <p>Тестовая версия на 14 дней и 20 руб. на балансе для проверки качества связи</p>
-                <button>ПОПРОБОВАТЬ</button>
-            </div>
-            <div class="pic2">
-                <h3>При оплате на <br>1 год от 299 руб.</h3>
-                <p>Платите только за наш сервис, связь оплачивается по минимальной цене 4 руб. за минуту.</p>
-                <button>ПОДКЛЮЧИТЬ</button>
-            </div>
+       <section class="card-section">
+        <div class="conteiner">
+            <ul class="cards">
+                <li class="card card_type1 ">
+                    <h3 class="loga">Бесплатно <br>О руб.</h3>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quia voluptates illum ea aspernatur corporis, maiores nisi esse neque. Pariatur totam veniam temporibus vero, ipsam aliquam sit facilis dolorem unde?</p>
+                    <button>zzz</button>
+                </li>
+                <li class="card card_type1 ">
+                    <h3 class="loga">Бесплатно <br>О руб.</h3>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum quia voluptates illum ea aspernatur corporis, maiores nisi esse neque. Pariatur totam veniam temporibus vero, ipsam aliquam sit facilis dolorem unde?</p>
+                    <button>zzz</button>
+                </li>
+            </ul>
         </div>
+       </section>
     </main>
 </body>
 </html>
