--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <iframe src="https://www.youtube.com/watch?v=SpCUuyZZTp8" title="CSS для Начинающих - Практический Курс" 
             allow=""  frameborder="0"></iframe>
         </div>
+        <img src="./img/fish.svg" alt="">
        <section class="card-section">
         <div class="conteiner">
             <ul class="cards">
@@ -71,5 +72,8 @@
         </div>
        </section>
     </main>
+<footer>
+    <img src="./img/fon.svg" >
+</footer>
 </body>
 </html>
